Tue Mar 11 22:47:06 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* examples/handcrafted/Display/HUDisplayE.idl: Removed redundant
	  operations that have already been defined in the facet interface.

	* examples/handcrafted/Display/HUDisplay_svnt.cpp:
	* examples/handcrafted/Display/HUDisplay_svnt.h:
	* examples/handcrafted/Display/HUDisplay_svnt.inl: Added hand
	  generated code based on the glue code template in

	    docs/templates/

	* docs/templates/CIAO_Glue_Session_Template.cpp:
	* docs/templates/CIAO_Glue_Session_Template.h:
	* docs/templates/CIAO_Glue_Session_Template.inl: Updated template
	  code based on results from hand generated code.

Tue Mar 11 15:18:52 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* bin/generate_component_mpc.pl: Added this new to auto-generate
	  the mpc files for a single component implementation.  The mpc
	  file generated by the script should work for most simple
	  component implementation, without modification and can serve as
	  a template for more complicated ones.  This script also
	  generates hints that can be fed back to a shell to create the
	  necessary export definition files.

	* docs/todo.html: Added improvement items that can be done for
	  generate_component_mpc.pl.

	* bin/gen_export_files.cmd: Removed.  The new
	  generate_component_mpc script provides more accurate hints on
	  how to create export files.


	  Renamed and reorganized all files in the following
	  multi-component example according to the guideline I set in
	  docs/new_component.html.

	* examples/handcrafted/Display/Display.mpc:
	* examples/handcrafted/Display/HUD_skel_export.h:
	* examples/handcrafted/Display/HUD_stub_export.h:
	* examples/handcrafted/Display/GPS/GPS_skel_export.h:
	* examples/handcrafted/Display/NavDisplay/NavDisplay_skel_export.h:
	* examples/handcrafted/Display/RateGen/RateGen_skel_export.h:
	  Removed.

	* examples/handcrafted/Display/HUDisplay.mpc:
	* examples/handcrafted/Display/HUDisplay_stub_export.h: